--- a/src/styles/Generalcalc.module.css
+++ b/src/styles/Generalcalc.module.css
@@ -3,9 +3,11 @@
 
 .uigrid {
     display: grid;
-    grid-template-rows:  0.7fr 3fr 4fr;
+    grid-template-rows:  0.7fr 3fr 3.5fr;
     height: 100vh;
     margin: 5px;
+    overflow-y: auto;
+
 }
 
 .logocontainer {
@@ -69,7 +71,8 @@
 .inputsection {
     display: flex;
     flex-direction: column;
-    overflow: auto;
+    overflow-y: auto;
+
 
 
 }
@@ -109,7 +112,7 @@
     justify-content: space-between;
     padding: 5px;
     border-radius: 10px;
-
+    overflow: auto;
 
 
 }
