--- a/src/styles/Normalcalc.module.css
+++ b/src/styles/Normalcalc.module.css
@@ -4,32 +4,35 @@
 .secflex {
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
-    height: 110%;
     gap: 5px;
+    overflow: auto;
+    height: 98%;
 
 }
 
 .secflexfunc {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    height: 110%;
+    height: 98%;
     gap: 5px;
-
+    overflow: auto;
 }
 
 .secflexabc {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    height: 110%;
+    height: 98%;
     gap: 10px;
+    overflow: auto;
 
 }
 
 .calcflex {
     display: grid;
     grid-template-columns: 1fr;
-    height: 110%;
+    height: 90%;
     gap: 10px;
+    overflow: auto;
 }
 
 .basicfuncs {
@@ -37,6 +40,7 @@
     grid-template-columns: 1fr 1fr 1fr;
     gap: 3px;
     height: 100%;
+    overflow: auto;
 
 }
 
