--- a/src/styles/Generalcalc.module.css
+++ b/src/styles/Generalcalc.module.css
@@ -170,6 +170,9 @@
 .solutionwrapper{
     height: 60%;
 }
+.adstyle{
+    display: block;
+}
 .solution {
     font-family: 'Source Sans Pro', sans-serif;
     font-weight: bolder;
