--- a/src/styles/Generalcalc.module.css
+++ b/src/styles/Generalcalc.module.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bubbler+One&family=Source+Sans+Pro:wght@300&display=swap');
 
-
+::-webkit-scrollbar{
+    display: none;
+}
 .uigrid {
     display: grid;
     grid-template-rows:  0.7fr 3fr 3.5fr;
@@ -186,6 +188,9 @@
 .adspace2{
     height: 40%;
 }
+.expressioninputter{
+    overflow: auto;
+}
 
 @keyframes solutionanime {
     from {
@@ -285,8 +290,6 @@
     background-color: black;
 };
 .adspace2{
-    background-color:darkblue ;
-    height: 40%;
-    display: none;
+    height: 30%;
 }
 }
