--- a/src/styles/Normalcalc.module.css
+++ b/src/styles/Normalcalc.module.css
@@ -6,20 +6,23 @@
     grid-template-columns: 1fr 2fr 1fr;
     gap: 5px;
     overflow: auto;
-    height:70%;
+    max-height: 80%;
+    height:50%;
 
 }
 
 .secflexfunc {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    height: 70%;
+    height:50%;
+    max-height: 80%;
     gap: 5px;
 
 }
 
 .secflexabc {
     display: grid;
+    max-height: 80%;
     grid-template-columns: 1fr 1fr;
     height: 70%;
     gap: 10px;
@@ -30,7 +33,8 @@
 .calcflex {
     display: grid;
     grid-template-columns: 1fr;
-    height: 75%;
+    max-height: 80%;
+    height: 60%;
     gap: 10px;
 
 }
