--- a/src/styles/Normalcalc.module.css
+++ b/src/styles/Normalcalc.module.css
@@ -101,7 +101,7 @@
     .secflex {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
-        height: 80%;
+        height: 75%;
         gap: 1px;
 
     }
@@ -109,7 +109,7 @@
     .secflexfunc {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        height: 80%;
+        height: 70%;
         gap: 1px;
         font-size: 0.8rem;
 
@@ -118,7 +118,7 @@
     .secflexabc {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        height: 80%;
+        height: 70%;
         gap: 1px;
         font-size: 0.8rem;
 
@@ -127,7 +127,7 @@
     .calcflex {
         display: grid;
         grid-template-columns: 1fr;
-        height: 80%;
+        height: 75%;
         gap: 1px;
         font-size: 0.9rem;
     }
@@ -149,4 +149,29 @@
         z-index: 2;
         transition: 0.1s;
     }
+    .basicfuncs {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 3px;
+        height: 70%;
+    
+    
+    }
+    
+    .operations {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 3px;
+        height: 70%;
+    
+    
+    }
+    
+    .numpad {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 3px;
+        height: 70%;
+    }
+    
 }
