--- a/src/styles/Generalcalc.module.css
+++ b/src/styles/Generalcalc.module.css
@@ -6,7 +6,7 @@
     grid-template-rows:  0.7fr 3fr 3.5fr;
     height: 100vh;
     margin: 5px;
-    overflow-y: auto;
+    overflow: hidden;
 
 }
 
