--- a/src/styles/Normalcalc.module.css
+++ b/src/styles/Normalcalc.module.css
@@ -16,6 +16,7 @@
     grid-template-columns: 1fr 1fr;
     height:55%;
     max-height: 80%;
+    overflow: auto;
     gap: 5px;
 
 }
@@ -24,6 +25,7 @@
     display: grid;
     max-height: 80%;
     grid-template-columns: 1fr 1fr;
+    overflow: auto;
     height: 70%;
     gap: 10px;
  
@@ -33,6 +35,7 @@
 .calcflex {
     display: grid;
     grid-template-columns: 1fr;
+    overflow: auto;
     max-height: 80%;
     height: 75%;
     gap: 10px;
