--- a/src/styles/Generalcalc.module.css
+++ b/src/styles/Generalcalc.module.css
@@ -158,8 +158,7 @@
 
 .solutionspace {
     display: block;
-    overflow-x:auto ;
-    overflow-y:hidden ;
+    overflow:auto ;
     max-height: 30%;
 
 }
