--- a/src/styles/Mathfield.module.css
+++ b/src/styles/Mathfield.module.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap');
 *{
     margin: 0;
+    min-height: fit-content;
   
 }
 
