--- a/src/styles/Mathfield.module.css
+++ b/src/styles/Mathfield.module.css
@@ -204,11 +204,13 @@
 
 }
 @media only screen and (max-width:800px){
+    body{}
     .ui{
         display: grid;
         grid-template-columns: 100%;
     }
     .adspace{
+        position: absolute;
        transform: scale(0);
        height: 0;
     }
