--- a/src/styles/Mathfield.module.css
+++ b/src/styles/Mathfield.module.css
@@ -196,10 +196,34 @@
     height: 100vh;
 
 }
-@media only screen and (max-width:800px){
+@media only screen and (max-width:1000px){
     .ui{
         display: grid;
         grid-template-columns: 100%;
+        height: 100vh;
+    }
+    .navbaropen{
+        position: absolute;
+        height: 100vh;
+        width: 100vw;
+        background-color: rgb(202, 202, 202);
+        z-index: 5;
+        display: block;
+        display: flex;
+        flex-direction: column;
+        padding: 10px;
+        animation-name: openinganimation;
+        animation-duration: 0.3s;
+        transition: 0.1s;
+    
+    }
+    
+}
+@media only screen and (min-width:2880px){
+    .ui{
+        display: flex;
+        align-items: center;
+        justify-content: center;
         height: 100vh;
     }
     .navbaropen{
