--- a/src/styles/Helppage.module.css
+++ b/src/styles/Helppage.module.css
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: center;
     overflow: auto;
-    height: 100vh;
+   
 }
 
 .headings{
@@ -36,6 +36,9 @@
     .innercontainer{
         width: 100%;
         overflow: auto;
-        height: 100vh;
+        
+    }
+    .container{
+        overflow-y: auto;
     }
 }
