--- a/src/styles/Generalcalc.module.css
+++ b/src/styles/Generalcalc.module.css
@@ -289,9 +289,12 @@
 };
 .solutionspace {
     display: block;
-    overflow:auto ;
+    overflow-x:auto ;
 
 
+}
+.mathsolution{
+    overflow-x: auto;
 }
 .adspace2{
     height: 30%;
